--- a/Gyde/TableView Cells/ProfileGuidesTableCell.xib
+++ b/Gyde/TableView Cells/ProfileGuidesTableCell.xib
@@ -45,7 +45,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 2}, {302, 46}}</string>
 								<reference key="NSSuperview" ref="532302566"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="216689635"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -60,7 +59,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 2}, {302, 46}}</string>
 								<reference key="NSSuperview" ref="532302566"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="708504688"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -75,7 +73,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{8, 10}, {30, 30}}</string>
 								<reference key="NSSuperview" ref="532302566"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="71632086"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -86,7 +83,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{44, 7}, {220, 16}}</string>
 								<reference key="NSSuperview" ref="532302566"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="902317442"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="6703823">
@@ -120,8 +116,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{44, 22}, {220, 16}}</string>
 								<reference key="NSSuperview" ref="532302566"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="6703823"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -149,7 +143,6 @@
 						</array>
 						<string key="NSFrameSize">{302, 49}</string>
 						<reference key="NSSuperview" ref="979932024"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="531383386"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<reference key="IBUIBackgroundColor" ref="6703823"/>
@@ -162,7 +155,6 @@
 				</array>
 				<string key="NSFrameSize">{302, 50}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="532302566"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -290,37 +282,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">42</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ProfileGuidesTableCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="descriptionLabel">UILabel</string>
-						<string key="thumbView">UIImageView</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="descriptionLabel">
-							<string key="name">descriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="thumbView">
-							<string key="name">thumbView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ProfileGuidesTableCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
