--- a/Gyde/View Controllers/MeVC.xib
+++ b/Gyde/View Controllers/MeVC.xib
@@ -16,6 +16,7 @@
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBUIScrollView</string>
+			<string>IBUISegmentedControl</string>
 			<string>IBUITableView</string>
 			<string>IBUITextView</string>
 			<string>IBUIView</string>
@@ -87,11 +88,11 @@
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
 										<float key="IBUIMinimumFontSize">10</float>
-										<object class="IBUIFontDescription" key="IBUIFontDescription" id="679381211">
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
 											<int key="type">2</int>
 											<double key="pointSize">12</double>
 										</object>
-										<object class="NSFont" key="IBUIFont" id="454907814">
+										<object class="NSFont" key="IBUIFont">
 											<string key="NSName">Helvetica-Bold</string>
 											<double key="NSSize">12</double>
 											<int key="NSfFlags">16</int>
@@ -318,7 +319,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{9, 165}, {302, 202}}</string>
 								<reference key="NSSuperview" ref="527568220"/>
-								<reference key="NSNextKeyView" ref="797717588"/>
+								<reference key="NSNextKeyView" ref="982475035"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="343953214"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -366,7 +367,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{-65, 134}, {385, 40}}</string>
 								<reference key="NSSuperview" ref="527568220"/>
-								<reference key="NSNextKeyView" ref="215823570"/>
+								<reference key="NSNextKeyView" ref="728527906"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="343953214"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -376,108 +377,47 @@
 									<string key="NSResourceName">profile-mode-pointer.png</string>
 								</object>
 							</object>
-							<object class="IBUIButton" id="215823570">
+							<object class="IBUISegmentedControl" id="728527906">
 								<reference key="NSNextResponder" ref="527568220"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{0, 133}, {80, 41}}</string>
+								<string key="NSFrame">{{0, 134}, {320, 44}}</string>
 								<reference key="NSSuperview" ref="527568220"/>
 								<reference key="NSNextKeyView" ref="366244278"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<reference key="IBUIBackgroundColor" ref="343953214"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUILineBreakMode">0</int>
-								<string key="IBUINormalTitle">MY PLACES</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC43OTYwNzg0MzE0IDAuMjY2NjY2NjY2NyAwLjA3ODQzMTM3MjU1AA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC40ODYyNzQ1MDk4IDAuNDgyMzUyOTQxMiAwLjQ2NjY2NjY2NjcAA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="331386662"/>
-								<reference key="IBUIFontDescription" ref="679381211"/>
-								<reference key="IBUIFont" ref="454907814"/>
-							</object>
-							<object class="IBUIButton" id="797717588">
-								<reference key="NSNextResponder" ref="527568220"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{80, 133}, {80, 41}}</string>
-								<reference key="NSSuperview" ref="527568220"/>
-								<reference key="NSNextKeyView" ref="544445774"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<reference key="IBUIBackgroundColor" ref="343953214"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<string key="IBUINormalTitle">MY GUIDES</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC43OTYwNzg0MzE0IDAuMjY2NjY2NjY2NyAwLjA3ODQzMTM3MjU1AA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC40ODYyNzQ1MDk4IDAuNDgyMzUyOTQxMiAwLjQ2NjY2NjY2NjcAA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="331386662"/>
-								<reference key="IBUIFontDescription" ref="679381211"/>
-								<reference key="IBUIFont" ref="454907814"/>
-							</object>
-							<object class="IBUIButton" id="544445774">
-								<reference key="NSNextResponder" ref="527568220"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{164, 133}, {76, 41}}</string>
-								<reference key="NSSuperview" ref="527568220"/>
-								<reference key="NSNextKeyView" ref="68494381"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<reference key="IBUIBackgroundColor" ref="343953214"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUILineBreakMode">0</int>
-								<string key="IBUINormalTitle">LOVED PLACES</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC43OTYwNzg0MzE0IDAuMjY2NjY2NjY2NyAwLjA3ODQzMTM3MjU1AA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC40ODYyNzQ1MDk4IDAuNDgyMzUyOTQxMiAwLjQ2NjY2NjY2NjcAA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="331386662"/>
-								<reference key="IBUIFontDescription" ref="679381211"/>
-								<reference key="IBUIFont" ref="454907814"/>
-							</object>
-							<object class="IBUIButton" id="68494381">
-								<reference key="NSNextResponder" ref="527568220"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{240, 133}, {80, 41}}</string>
-								<reference key="NSSuperview" ref="527568220"/>
-								<reference key="NSNextKeyView" ref="982475035"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<reference key="IBUIBackgroundColor" ref="343953214"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUILineBreakMode">0</int>
-								<string key="IBUINormalTitle">LOVED GUIDES</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC43OTYwNzg0MzE0IDAuMjY2NjY2NjY2NyAwLjA3ODQzMTM3MjU1AA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC40ODYyNzQ1MDk4IDAuNDgyMzUyOTQxMiAwLjQ2NjY2NjY2NjcAA</bytes>
-								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="331386662"/>
-								<reference key="IBUIFontDescription" ref="679381211"/>
-								<reference key="IBUIFont" ref="454907814"/>
+								<int key="IBNumberOfSegments">4</int>
+								<int key="IBSelectedSegmentIndex">0</int>
+								<array key="IBSegmentTitles">
+									<string>My Places</string>
+									<string>My Guides</string>
+									<string>Loved Places</string>
+									<string>Loved Guides</string>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentWidths">
+									<real value="0.0"/>
+									<real value="0.0"/>
+									<real value="0.0"/>
+									<real value="0.0"/>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentEnabledStates">
+									<boolean value="YES"/>
+									<boolean value="YES"/>
+									<boolean value="YES"/>
+									<boolean value="YES"/>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentContentOffsets">
+									<string>{0, 0}</string>
+									<string>{0, 0}</string>
+									<string>{0, 0}</string>
+									<string>{0, 0}</string>
+								</array>
+								<array class="NSMutableArray" key="IBSegmentImages">
+									<object class="NSNull" id="4"/>
+									<reference ref="4"/>
+									<reference ref="4"/>
+									<reference ref="4"/>
+								</array>
 							</object>
 							<object class="IBUILabel" id="743065716">
 								<reference key="NSNextResponder" ref="527568220"/>
@@ -742,6 +682,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">segmentedControl</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="728527906"/>
+					</object>
+					<int key="connectionID">154</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="828183132"/>
 						<reference key="destination" ref="372490531"/>
@@ -755,24 +703,6 @@
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">131</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">guidesButtonTapped:</string>
-						<reference key="source" ref="797717588"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">134</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">placesButtonTapped:</string>
-						<reference key="source" ref="215823570"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">133</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -793,24 +723,6 @@
 					<int key="connectionID">137</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">lovedPlacesButtonTapped:</string>
-						<reference key="source" ref="544445774"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">145</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">lovedGuidesButtonTapped:</string>
-						<reference key="source" ref="68494381"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">146</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="226172337"/>
@@ -825,6 +737,15 @@
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">151</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">segmentedControlChanged:</string>
+						<reference key="source" ref="728527906"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">13</int>
+					</object>
+					<int key="connectionID">155</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -866,8 +787,6 @@
 							<reference ref="366244278"/>
 							<reference ref="44301509"/>
 							<reference ref="743065716"/>
-							<reference ref="797717588"/>
-							<reference ref="215823570"/>
 							<reference ref="752318191"/>
 							<reference ref="248256054"/>
 							<reference ref="104876960"/>
@@ -876,10 +795,9 @@
 							<reference ref="543537827"/>
 							<reference ref="219476980"/>
 							<reference ref="1081442"/>
-							<reference ref="544445774"/>
-							<reference ref="68494381"/>
 							<reference ref="80184052"/>
 							<reference ref="226172337"/>
+							<reference ref="728527906"/>
 						</array>
 						<reference key="parent" ref="178202495"/>
 					</object>
@@ -923,18 +841,6 @@
 						<reference key="parent" ref="527568220"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">18</int>
-						<reference key="object" ref="797717588"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="527568220"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">19</int>
-						<reference key="object" ref="215823570"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="527568220"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
 						<reference key="object" ref="752318191"/>
 						<array class="NSMutableArray" key="children">
@@ -959,12 +865,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">23</int>
 						<reference key="object" ref="972963140"/>
-						<reference key="parent" ref="527568220"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">24</int>
-						<reference key="object" ref="432296558"/>
-						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="527568220"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1006,16 +906,6 @@
 						<reference key="parent" ref="752318191"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">141</int>
-						<reference key="object" ref="544445774"/>
-						<reference key="parent" ref="527568220"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">143</int>
-						<reference key="object" ref="68494381"/>
-						<reference key="parent" ref="527568220"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">147</int>
 						<reference key="object" ref="80184052"/>
 						<reference key="parent" ref="527568220"/>
@@ -1030,6 +920,16 @@
 						<reference key="object" ref="982475035"/>
 						<reference key="parent" ref="178202495"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">153</int>
+						<reference key="object" ref="728527906"/>
+						<reference key="parent" ref="527568220"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">24</int>
+						<reference key="object" ref="432296558"/>
+						<reference key="parent" ref="527568220"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1039,21 +939,14 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="141.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="1" key="141.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
-				<real value="0.0" key="141.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
-				<string key="143.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="0.0" key="143.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="147.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="149.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="153.CustomClassName">SDSegmentedControl</string>
+				<string key="153.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<integer value="3" key="153.IUISegmentedControlInspectorSelectedSegmentMetadataKey"/>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="1" key="18.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
-				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="1" key="19.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
-				<real value="0.0" key="19.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1076,7 +969,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">152</int>
+			<int key="maxID">155</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
