--- a/Gyde/View Controllers/TARegisterVC.xib
+++ b/Gyde/View Controllers/TARegisterVC.xib
@@ -42,25 +42,39 @@
 					<object class="IBUIImageView" id="523921064">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{320, 416}</string>
+						<string key="NSFrame">{{0, 100}, {320, 416}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="381552604"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<int key="IBUIContentMode">5</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
+						<object class="NSCustomResource" key="IBUIImage" id="529074312">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">orange-bg.jpg</string>
 						</object>
 					</object>
+					<object class="IBUIImageView" id="381552604">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrameSize">{320, 416}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="792937744"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<int key="IBUIContentMode">5</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<reference key="IBUIImage" ref="529074312"/>
+					</object>
 					<object class="IBUIScrollView" id="792937744">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">268</int>
+						<int key="NSvFlags">308</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIView" id="1038844964">
 								<reference key="NSNextResponder" ref="792937744"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">308</int>
 								<array class="NSMutableArray" key="NSSubviews">
 									<object class="IBUIImageView" id="156306488">
 										<reference key="NSNextResponder" ref="1038844964"/>
@@ -343,7 +357,7 @@
 										<string key="NSFrame">{{109, 185}, {190, 40}}</string>
 										<reference key="NSSuperview" ref="1038844964"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="523921064"/>
+										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="739021341">
 											<int key="NSColorSpace">3</int>
@@ -412,7 +426,7 @@
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="792937744"/>
+				<reference key="NSNextKeyView" ref="523921064"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -574,6 +588,7 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="792937744"/>
 							<reference ref="523921064"/>
+							<reference ref="381552604"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -698,6 +713,11 @@
 						<reference key="object" ref="821061384"/>
 						<reference key="parent" ref="1038844964"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">61</int>
+						<reference key="object" ref="381552604"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -721,6 +741,7 @@
 				<string key="51.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="55.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -729,7 +750,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">60</int>
+			<int key="maxID">61</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
